--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -12,7 +12,7 @@
 }
 
 .modal {
-  background-color: white;
+  background-color: black;
   padding: 40px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
